# nlp-intro

./: 1_intro.ipynb  2_core_concepts.ipynb  pyproject.toml
